# md_light

./: .gitignore  Cargo.toml  Makefile.toml  README.md  employee_data.toml  t.txt
ressources/: author.html  home.html  index.js  manga.html  manga_chapter.html  manga_info.html  search.html  styles.css
src/: anime_scraper.rs  anime_templates.rs  api_error.rs  cli_options.rs  consts.rs  database.rs  downloader.rs  flags.rs  installer.rs  language.rs  main.rs  manga_templates.rs  md_account.rs  md_struct.rs  offline_reader.rs  online_md.rs  online_md_BACKUP_569103.rs  online_md_LOCAL_569103.rs  query_struct.rs  struct_constructor.rs  templates.rs  tera_templates.rs  tests.rs  utills.rs
templates/: author.html  home.html  manga_chapter.html  manga_info.html  read_chapter.html  search.html
views/: error.html
