[package]
name = "md_light"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
colored = "2.0.4"
local-ip-address = "0.5.3"
maud = "0.25.0"
reqwest = { version = "0.11.18" }
# serde = "1.0.181"
serde_json = "1.0.102"
tokio = "1.32.0"
