[package]
name = "md_light"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive"] }
colored = "2.0.4"
lazy_static = "1.4.0"
local-ip-address = "0.5.3"
markdown = "0.3.0"
maud = "0.25.0"
regex = "1.10.2"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.102"
tera = "1.19.1"
tokio = { version = "1.32", features = ["full"] }
toml = "0.8.1"

